--- a/client/src/components/boards/BoardSettingsModal/GeneralPane/EditInformation.module.scss
+++ b/client/src/components/boards/BoardSettingsModal/GeneralPane/EditInformation.module.scss
@@ -56,4 +56,48 @@
     border: 1px solid rgba(255, 255, 255, 0.12) !important;
     color: #e6edf3 !important;
   }
+
+  /* Slider de percentagem */
+  .sliderRow {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+  }
+
+  .slider {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 6px;
+    border-radius: 4px;
+    background: rgba(255, 255, 255, 0.15);
+    outline: none;
+  }
+
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background: #4ea1ff;
+    cursor: pointer;
+    border: 1px solid rgba(255, 255, 255, 0.4);
+  }
+
+  .slider::-moz-range-thumb {
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background: #4ea1ff;
+    cursor: pointer;
+    border: 1px solid rgba(255, 255, 255, 0.4);
+  }
+
+  .sliderValue {
+    min-width: 48px;
+    text-align: right;
+    color: #e6edf3;
+    font-variant-numeric: tabular-nums;
+  }
 }
