--- a/client/src/components/boards/BoardSettingsModal/PreferencesPane/DefaultView.module.scss
+++ b/client/src/components/boards/BoardSettingsModal/PreferencesPane/DefaultView.module.scss
@@ -15,6 +15,7 @@
     border: 1px solid transparent !important;
     backdrop-filter: blur(14px);
     -webkit-backdrop-filter: blur(14px);
+    color: #e6edf3;
     
     &:last-child {
       margin-bottom: 0;
