--- a/client/src/components/common/HomeActions/RightSide/SelectOrderStep.module.scss
+++ b/client/src/components/common/HomeActions/RightSide/SelectOrderStep.module.scss
@@ -13,6 +13,13 @@
     margin-bottom: 0;
   }
 
+  .menuItem:hover {
+    background: rgba(59, 130, 246, 0.18);
+    box-shadow: 0 6px 14px rgba(0, 0, 0, 0.2),
+      0 0 0 1px rgba(96, 165, 250, 0.22) inset;
+    color: #eaf2ff;
+  }
+
   .menuItemIcon {
     float: left;
     margin: 0 8px 0 0;
